<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Watchlist</string>
    <string name="actionText">ACTION</string>
    <string name="comedyText">COMEDY</string>
    <string name="dramaText">DRAMA</string>
    <string name="horrorText">HORROR</string>
    <string name="mysteryText">MYSTERY</string>
    <string name="thrillerText">THRILLER</string>
    <string name="movie_date">Date: %1$s</string>
    <string name="details_btn"></string>
    <string name="movie_Date">Date: %1$s</string>
    <string name="movie_Genre">Genre: %1$s</string>
    <string name="movie_Synopsis">Synopsis: %1$s</string>
    <string name="movie_Cast">Cast: %1$s</string>


</resources>