<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0B0B"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/watchlist_btn"
        android:layout_width="392dp"
        android:layout_height="64dp"
        android:text="My Watchlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/actionButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/actionText"
        android:src="@drawable/action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/comedyButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/comedyText"
        android:src="@drawable/comedy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/dramaButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dramaText"
        android:src="@drawable/drama"
        app:layout_constraintEnd_toStartOf="@+id/horrorButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/horrorButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/horrorText"
        android:src="@drawable/horror"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comedyText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/mysteryButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/mysteryText"
        android:src="@drawable/mystery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dramaText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/thrillerButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/thrillerText"
        android:src="@drawable/thriller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horrorText"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/actionText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/actionText"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionButton" />

    <TextView
        android:id="@+id/comedyText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/comedyText"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comedyButton" />

    <TextView
        android:id="@+id/dramaText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/dramaText"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dramaButton" />

    <TextView
        android:id="@+id/horrorText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/horrorText"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horrorButton" />

    <TextView
        android:id="@+id/mysteryText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/mysteryText"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mysteryButton" />

    <TextView
        android:id="@+id/thrillerText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/thrillerText"
        android:textColor="#EDEDED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thrillerButton" />

    <TextView
        android:id="@+id/textHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>